--- a/CustomerChurnPrediction.ipynb
+++ b/CustomerChurnPrediction.ipynb
@@ -5,12 +5,13 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "Ub2TDTLxjeRZ",
         "MzFLL5FkjhOa",
         "e0R2sGGpjqgy",
+        "0873Kr7xlHyn",
+        "SlFvM5ojzHZF",
         "BSrbwvX6pU2y"
       ],
-      "authorship_tag": "ABX9TyPbTnY32yMaKFyq1pBBXmkJ",
+      "authorship_tag": "ABX9TyPNeUD6zJ72fV6vEarGc+df",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ParamAhuja/DL_notebooks/blob/main/CustomerChurnPrediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ParamAhuja/DL_Notebooks/blob/main/CustomerChurnPrediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -425,7 +426,7 @@
       ],
       "source": [
         "import pandas as pd\n",
-        "df = pd.read_csv('Churn_Modelling.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/ParamAhuja/DL_Notebooks/refs/heads/main/datasets/Churn_Modelling.csv')\n",
         "df.head()"
       ]
     },
