--- a/neural_network_scratch.ipynb
+++ b/neural_network_scratch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMOr7IT4cnSMSthqM8bUcw2",
+      "authorship_tag": "ABX9TyPY+Kesit9v8KZAoy0XPhl5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -273,41 +273,67 @@
         "  layer_count = len(w)\n",
         "  # for i in range(layer_count):\n",
         "\n",
-        "  O = []\n",
+        "  O = [x]\n",
+        "  a=x\n",
         "  for k in range(layer_count):\n",
         "    w_k = w[k]\n",
         "    # print(w_k)\n",
         "    # w_t = w_k.reshape(-1,w_k.shape[0] )\n",
         "    w_t = w_k.T\n",
-        "    x_t = x.reshape( x.shape[0], 1)\n",
+        "    a_t = a.reshape( a.shape[0], 1)\n",
         "    # print(x_t)\n",
-        "    O.append(np.dot(w_t, x_t) + b[k].reshape(b[k].shape[0], 1))\n",
-        "    x= O[-1]\n",
+        "    O.append(np.dot(w_t, a_t) + b[k].reshape(b[k].shape[0], 1))\n",
+        "    a= O[-1]\n",
         "    # print(\"o:\", x)\n",
         "  return O\n",
         "\n",
-        "forward_pass(X[0], w, b)"
+        "print(forward_pass(X[0], w, b))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XR2nCmf2b-6G",
-        "outputId": "99d690ac-f5d0-4301-d4fe-b2eed98e7f01"
+        "outputId": "4d6bac3c-0103-4f36-ecee-13a3079d0e2d"
       },
-      "execution_count": 10,
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[array([1., 0.]), array([[1.],\n",
+            "       [1.]]), array([[2.]])]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "forward_pass(X[0], w, b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eMs0p2IDSd35",
+        "outputId": "3c33e1be-e62d-4589-cbb1-0844248df847"
+      },
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[array([[1.],\n",
+              "[array([1., 0.]),\n",
+              " array([[1.],\n",
               "        [1.]]),\n",
               " array([[2.]])]"
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 52
         }
       ]
     },
@@ -335,9 +361,10 @@
         "    w_gradients.append( np.zeros((layer_dim[i], layer_dim[i+1])) )\n",
         "\n",
         "  for k in range(len(layer_dim)-1 ):    # each layer dim\n",
-        "    for i in range(layer_dim[k]):     # each incoming node\n",
-        "      for j in range(layer_dim[k+1]): # each outgoing node\n",
-        "        dj_dw_kij = dl_dy* 1 # calculate this !!!!!!!\n",
+        "    for i in range(layer_dim[k]):       # each incoming node\n",
+        "      for j in range(layer_dim[k+1]):   # each outgoing node\n",
+        "        dj_dw_kij = dl_dy* 1 * O[k][i]      # calculate this !!!!!!!\n",
+        "\n",
         "        w_gradients[k][i][j] += dj_dw_kij\n",
         "\n",
         "  b_gradients = []\n",
@@ -355,34 +382,24 @@
       "metadata": {
         "id": "EY8x1Eytb0LR",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 315
         },
-        "outputId": "927acdee-06f4-4d3f-92ae-2bd5fd108291"
+        "outputId": "344422af-3e3e-4525-ef26-0ae819f49be3"
       },
-      "execution_count": 39,
+      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-39-3998686423.py:25: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  w_gradients[k][i][j] += dj_dw_kij\n",
-            "/tmp/ipython-input-39-3998686423.py:33: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  b_gradients[i][j] += dl_dy\n"
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "only length-1 arrays can be converted to Python scalars",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-44-3329226641.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mw_gradients\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mb_gradients\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mwg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0mwg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/tmp/ipython-input-44-3329226641.py\u001b[0m in \u001b[0;36mcompute_loss\u001b[0;34m(x, target, w, b)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlayer_dim\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m       \u001b[0;31m# each incoming node\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlayer_dim\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m   \u001b[0;31m# each outgoing node\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m         \u001b[0mdj_dw_kij\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdl_dy\u001b[0m\u001b[0;34m*\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mO\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m        \u001b[0;31m# calculate this !!!!!!!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0mw_gradients\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mdj_dw_kij\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: only length-1 arrays can be converted to Python scalars"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[array([[-4., -4.],\n",
-              "        [-4., -4.]]),\n",
-              " array([[-4.],\n",
-              "        [-4.]])]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 39
         }
       ]
     },
